# notes_architecture

./: .gitignore  Makefile  README.md
benchmarking/data-structures/: Makefile  README.md  pyproject.toml
benchmarking/data-structures/src/data_structures/: dataclass_vs_native.py
benchmarking/data-structures/tests/: test_benchmark_dataclass_vs_native.py  test_dataclass_vs_native_benchmark.py
orchestration/base-domain/: CLAUDE.md  Makefile  README.md  analysis.md  pyproject.toml  state.md
orchestration/base-domain/docs/: testing-architecture.md
orchestration/base-domain/learning/: async_architecture_explanation.md
orchestration/base-domain/src/base_domain/: entrypoint.py  environment.py  orchestrator.py
orchestration/base-domain/src/base_domain/domains/: base_domain.py  exporter_manager.py  metrics_manager.py  monitor.py  processor_manager.py  zmq_manager.py
orchestration/base-domain/tests/: conftest.py  test_exporter_manager.py  test_metrics_manager.py  test_processor_manager.py  test_zmq_manager.py
orchestration/base-domain/tests/base_test_classes/: base_domain_test.py
orchestration/base-domain/tests/integration/: test_zmq_pipeline.py  zmq_publisher.py
orchestration/docs/: orchestrator.md
patterns/environment-enuming/: enum_config_comparison.py  enum_config_patterns.md  environment_approach1_mixed.py  environment_approach2_namespace.py  environment_approach3_custom.py
patterns/singleton-patterns/: .gitignore  DEMO_SUMMARY.md  Makefile  README.md  demo.py  pyproject.toml
patterns/singleton-patterns/src/singleton_patterns/: __about__.py  __init__.py  approach1_new_override.py  approach2_module_level.py
patterns/singleton-patterns/tests/: test_approach1_problems.py  test_approach2_advantages.py
