[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-structures"
dynamic = ["version"]
description = "Benchmark testing for Python data structures"
requires-python = ">=3.8"
dependencies = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
]

[tool.hatch.version]
path = "src/data_structures/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.0.0",
  "pytest-benchmark>=4.0.0",
]

[tool.hatch.envs.default.scripts]
benchmark = "pytest tests/ -v --benchmark-only"
benchmark-compare = "pytest tests/ -v --benchmark-compare"

[[tool.uv.index]]
url = "https://pypi.caesari.se/simple"
